# game-in-a-box

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
common/: AutoComplete.cpp  AutoComplete.h  BitStream.cpp  BitStream.h  BitStreamReadOnly.cpp  BitStreamReadOnly.h  BuildMacros.h  DeltaCoder.cpp  DeltaCoder.h  DeltaMapItem.h  DeltaMapVector.h  GameInABox.cpp  GameInABox.h  Huffman.cpp  Huffman.h  INetworkAddress.cpp  INetworkAddress.h  INetworkManager.cpp  INetworkManager.h  IReflected.cpp  IReflected.h  IStateManager.cpp  IStateManager.h  IStateObject.h  MockINetworkAddress.h  NetworkCommand.cpp  NetworkCommand.h  NetworkFragment.cpp  NetworkFragment.h  NetworkManager.cpp  NetworkManager.h  NetworkManagerBase.cpp  NetworkManagerBase.h  NetworkManagerClient.cpp  NetworkManagerClient.h  NetworkManagerClientNew.cpp  NetworkManagerClientNew.h  NetworkManagerServer.cpp  NetworkManagerServer.h  NetworkPacket.h  (+38 more)
include/Common/: BitStream.hpp  BitStreamReadOnly.hpp  BufferSerialisation.hpp  Flags.hpp  Logging.hpp  MathConstants.hpp  No.hpp  UnitOperators.hpp
include/Network/: ClientHandle.hpp  ClientTracker.hpp  Delta.hpp  DeltaBuffer.hpp  DeltaCoder.hpp  DeltaCoder.tpp  DeltaCoderTools.hpp  DeltaCreator.hpp  DeltaMapItem.hpp  DeltaParser.hpp  DeltaTypes.hpp  INetworkManager.hpp  INetworkProvider.hpp  IStateManager.hpp  MathBitTwiddling.hpp  NetworkManagerClient.hpp  NetworkManagerServer.hpp  NetworkPacket.hpp  No.hpp  Sequence.hpp  Units.hpp  WrappingCounter.hpp
mock/Common/: MockIStateManager.hpp
mock/Common/Network/: MockINetworkProvider.cpp  MockINetworkProvider.hpp
server/: GameInABoxServer.cpp  GameInABoxServer.h  main.cpp
source/Common/: AutoComplete.cpp  AutoComplete.hpp  BitStream.cpp  BitStream.h  BitStream.hpp  BitStreamReadOnly.cpp  BitStreamReadOnly.h  BitStreamReadOnly.hpp  BuildMacros.hpp  ClientHandle.hpp  GameInABox.cpp  GameInABox.h  GameSimple.cpp  GameSimple.h  GameSimple.hpp  Huffman.cpp  Huffman.h  Huffman.hpp  IReflected.cpp  IReflected.h  IReflected.hpp  IStateManager.cpp  IStateManager.h  IStateManager.hpp  Logging.cpp  MakeUnique.h  MakeUnique.hpp  MotleyUniquePointer.hpp  No.hpp  PrecompiledHeaders.hpp  ReflectionKey.hpp  ReflectionManager.cpp  ReflectionManager.h  ReflectionManager.hpp  RollingStatistics.cpp  RollingStatistics.h  RollingStatistics.hpp  Sequence.hpp  WrappingCounter.h  WrappingCounter.hpp
source/Common/Logging/: Logging.cpp  Logging.hpp
source/Common/Network/: BufferSerialisation.h  BufferSerialisation.hpp  Connection.cpp  Connection.hpp  DeltaCoder-Implementation.hpp  DeltaCoder.cpp  DeltaCoder.h  DeltaCoder.hpp  Handshake.cpp  Handshake.hpp  Hash.cpp  Hash.hpp  INetworkManager.cpp  INetworkManager.h  INetworkManager.hpp  INetworkProvider.cpp  INetworkProvider.h  INetworkProvider.hpp  NetworkKey.cpp  NetworkKey.hpp  NetworkManager.cpp  NetworkManager.h  NetworkManagerClient.cpp  NetworkManagerClient.h  NetworkManagerClient.hpp  NetworkManagerClientGuts.cpp  NetworkManagerClientGuts.hpp  NetworkManagerClientNew.cpp  NetworkManagerClientNew.h  NetworkManagerServer.cpp  NetworkManagerServer.h  NetworkManagerServer.hpp  NetworkManagerServerGuts.cpp  NetworkManagerServerGuts.hpp  NetworkPacket.h  NetworkPacket.hpp  NetworkPacketParser.cpp  NetworkPacketParser.h  NetworkProvider.cpp  NetworkProviderInMemory.cpp  (+62 more)
source/Network/: ClientTracker.cpp  DeltaCoderTools.cpp  DeltaMapItem.cpp  INetworkManager.cpp  INetworkProvider.cpp  IStateManager.cpp  NetworkManagerClient.cpp  NetworkManagerServer.cpp
source/Network/Implementation/: BitStream.cpp  BitStream.hpp  BitStreamReadOnly.cpp  BitStreamReadOnly.hpp  BufferSerialisation.hpp  Connection.cpp  Connection.hpp  Hash.hpp  Huffman.cpp  Huffman.hpp  Logging.cpp  Logging.hpp  NetworkKey.cpp  NetworkKey.hpp  NetworkManagerClientGuts.cpp  NetworkManagerClientGuts.hpp  NetworkManagerServerGuts.cpp  NetworkManagerServerGuts.hpp  NetworkProviderInMemory.cpp  NetworkProviderInMemory.hpp  NetworkProviderSynchronous.cpp  NetworkProviderSynchronous.hpp  Packet.cpp  Packet.hpp  PacketChallenge.cpp  PacketChallenge.hpp  PacketChallengeResponse.cpp  PacketChallengeResponse.hpp  PacketCommand.hpp  PacketCommandWithKey.hpp  PacketDelta.cpp  PacketDelta.hpp  PacketFragment.cpp  PacketFragment.hpp  PacketFragmentManager.cpp  PacketFragmentManager.hpp  Packets.hpp  Units.hpp  XorCode.hpp
source/Network/Test/: MockIStateManager.hpp  Network.supp  TestBitStream.cpp  TestClientServerN.cpp  TestNetworkProviderSynchronous.cpp  TestWrappingCounter.cpp  (+1 more)
source/Server/: GameInABoxServer.cpp  GameInABoxServer.h  GameInABoxServer.hpp  main.cpp
source/Unused/: AutoComplete.cpp  AutoComplete.hpp  BaseClassUniquePointer.hpp  DeltaCoder-Implementation.hpp  DeltaCoder.hpp  DeltaMapItem.hpp  GameSimple.cpp  GameSimple.hpp  Huffman.cpp  Huffman.hpp  IReflected.cpp  IReflected.hpp  PrecompiledHeaders.cpp  PrecompiledHeaders.hpp  ReflectionKey.hpp  ReflectionManager.cpp  ReflectionManager.hpp  RollingStatistics.cpp  RollingStatistics.hpp
test/Common/: TestAutoComplete.cpp  TestBitStream.cpp  TestBitStreamReadOnly.cpp  TestBufferSerialisation.cpp  TestHuffman.cpp  TestIReflected.cpp  TestReflectionManager.cpp  TestRollingStatistics.cpp  TestWrappingCounter.cpp
test/Network/: MockINetworkProvider.hpp  MockIStateManager.hpp  Network.supp  TestBitStreamReadOnly.cpp  TestBufferSerialisation.cpp  TestClientServer.cpp  TestClientServerN.cpp  TestConnection.cpp  TestDeltaCoder.cpp  TestHuffman.cpp  TestNetworkProviderInMemory.cpp  TestNetworkProviderSynchronous.cpp  TestPacketDelta.cpp  TestPacketFragment.cpp  TestPacketFragmentManager.cpp  TestPackets.cpp  TestWrappingCounter.cpp  TestXorCode.cpp
test/State/: TestDeltaCoder.cpp  TestDeltaStateGameSnapshot.cpp  TestDeltaStatePlayerClient.cpp  TestEntity.cpp  TestGame.cpp  TestMatrix3x3.cpp  TestQuaternion.cpp  TestVector.cpp  TestVector3.cpp  TestVector4.cpp  TestVectorFast.cpp
test/Unused/: TestAutoComplete.cpp  TestDeltaCoder.cpp  TestHuffman.cpp  TestIReflected.cpp  TestReflectionManager.cpp  TestRollingStatistics.cpp
tools/: generatePrecompiledHeader.sh
(+126 files in other folders)
